# EffPlast2D

./: .gitignore  CMakeLists.txt  EffPlast2D.cu  EffPlast2D.h  EffPlast3D.cu  README.md  av4_3D.m  boundary_problem.cu  eff_props_2D.m  eff_props_3D.m  effprops_2.exp  effprops_2.lib  get_sigma_2D.m  get_sigma_3D.m  main.cu  read_data_2D.m  set_mats_2D.m  set_mats_3D.m
